--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
   "dependencies": {
     "@sentry/node": "^7.13.0",
     "@sentry/tracing": "^7.13.0",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongoose": "^6.6.1"
+    "joi": "^17.6.0",
+    "mongoose": "^6.6.1",
+    "nodemailer": "^6.7.8",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.23.1",
