--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@sentry/tracing": "^7.13.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   },
