--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "googleapis": "^108.0.0",
     "joi": "^17.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
