--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@sentry/node": "^7.13.0",
     "@sentry/tracing": "^7.13.0",
+    "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^4.6.0",
     "connect-mongodb-session": "^3.1.1",
